Fixed misaligned text on main/home page

--- a/src/components/main/Home/home.css
+++ b/src/components/main/Home/home.css
@@ -76,3 +76,7 @@
     background-color: rgb(50, 50, 50);
     transition: background-color 200ms linear;
 }
+
+#mainTextOnly {
+    padding: 1rem;
+}
